--- a/dpdk.html
+++ b/dpdk.html
@@ -73,7 +73,7 @@ done
         <code>
 dpdk_driver=/usr/local/lib/x86_64-linux-gnu/dpdk-selected-pmds
         </code>
-        <h2>3. Next issue: Your computer puts many PCI Express devices in single IOMMU group together with network interfaces.</h2>
+        <h2>3. Next issue: Your computer puts many PCI Express devices in single IOMMU group together with network interfaces</h2>
         <p>I lived happily without even knowing what IOMMU grouping is until recently. And then this error hit me when I tried to use DPDK on a Gigabyte X399 Designare EX motherboard with a AMD Threadripper 2990WX:</p>
         <pre>
         <code>
